--- a/cd.html
+++ b/cd.html
@@ -44,7 +44,7 @@
             right: -30px;
             width: 100px;
             height: 150px;
-            background: url('cd-stick.png') no-repeat center/cover;
+            background: url('cd stick.png') no-repeat center/cover;
             transform-origin: top right;
             transform: rotate(-15deg); /* 默认稍微抬起 */
             transition: transform 0.5s ease-in-out;
