--- a/cd.html
+++ b/cd.html
@@ -90,7 +90,7 @@
         <button class="button" id="playButton">播放 / 暂停</button>
     </div>
 
-    <audio id="audio" src="和谐的音乐11-改.mp3"></audio>
+    <audio id="audio" src="和谐的乐曲11-改.mp3"></audio>
 
     <script>
         let audio = document.getElementById('audio');
