--- a/cd.html
+++ b/cd.html
@@ -14,6 +14,11 @@
             background-color: #f0f0f0;
             margin: 0;
         }
+        .header h1 {
+            font-size: 24px;
+            margin: 0;
+            color: #333;
+        }
 
         .player-container {
             position: relative;
@@ -80,6 +85,9 @@
     </style>
 </head>
 <body>
+     <div class="header">
+         <h1>我的播放器</h1>
+     </div>
 
     <div class="player-container">
         <div class="needle" id="needle"></div> <!-- 播放针 -->
